File Name: CHANGES

09/23/2014 FASP 1.5.9:
- Update PGMRES code. 
- Add new regression tests and update regression results. 
- Add upper limit for GMRES restarting number.
- Resolve multiple warnings in *.c files.
- Update Poisson FEM/FDM test results in out/poisson.out.
- Update TODO list.

09/22/2014 FASP 1.5.8:
- Update documentation and webpage.
- Regression test for fasp4blkoil due to a bug for setting parameters.
- Modify warning print level: less important warnings requires level>PRINT_MIN.
- Modify error print level and exit output.
- Fix several small problems in GMRES-type methods.
- Fix an AMG setup bug when setting up coarsest systems for direct solvers. 
- Fix a bug in setting restart number for pvgmres_mf.
- Fix warnings in VS2010 Win32 version.
- Fix a bug in timing subroutine which caused wrong wall time for some systems.
- File name change to avoid conflicts: message.h -> fasp_const.h.
- Reorganize GMRES code. 
- Update regression test results.

09/15/2014 FASP 1.5.7:
- Add a user option for choosing coarse level solvers.
- Fix average number of nonzeros output format problem. 
- Change AMG complexities output format. 
- Test VS10 and Intel Composer 2015 version.
- Update VS10 setting for MUMPS.
- Stop supporting VS08 in Windows.
- Update todo list.

08/12/2014 FASP 1.5.6:
- Handling errors when RS coarsening does not succeed. 
- Handling errors when Pairwise aggreation does not succeed. 
- Handling errors when VMB aggreation does not succeed. 
- When AMG setup fail on the finest level, use coarse solver.
- Check max level and make sure allocate at least one level.
- Add a name for G0 points (for pairwise aggregation).
- Uniformize debug output format.
- Change adaptive GMRES (various versions) restart number.
- Remove unused *_omp() functions.
- Update webpage.

07/26/2014 FASP 1.5.5:
- Modify the parameter for pairwise aggregation.
- Fix warnings for data type REAL in sparse_bsr.c
- Update results of the regression test.